--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
         window.onload = function() {
-            window.location.href = "https://htu.fitkit.xyz/m/1729334694644212.html?fbclid=PAY2xjawJdjSJleHRuA2FlbQEwAGFkaWQBqx2LiadqrgGn3i8Tk-aEIrLbOhkG_ZarbIXEe8nQP6z8yZiKIMIVeGaAcSmOcfWvBbjDEng_aem_Xa2hvQ8uFyVaLYdE5lmXVQ"; // Change this to the link you want
+            window.location.href = "https://t.me/SFAEarnings"; // Change this to the link you want
         };
 
          // window.onload = function() {
