--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Redirect</title>
-    <script type="text/javascript">
-        // Redirect immediately when the page loads
-        window.onload = function() {
-            window.location.href = "https://t.me/SFAEarnings"; // Change this to the link you want
-        };
-
-         // window.onload = function() {
-            // window.location.href = "workfromathomeredirect"; // Change this to the link you want
-        // }; 
-    </script>
+  <script>
+    window.location.replace("https://sogoodstore.tw/indu?id=27");
+  </script>
 </head>
 <body>
-    <!-- No content in the body -->
 </body>
 </html>
